--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,19 @@
-<h1>This is the Homepage</h1>
+<div id="page-content">
+  <div class="container" id="home-container">
+    <div class="jumbotron text-center text-white">
+      <br>
+      <br>
+      <br>
+      <br>
+      <h4 class="display-4">Look for immersion; come with no expectation, and just enjoy the journey!</h4>
+      <p class="lead"></p>
+      <br>
+      <a class="btn btn-outline-light btn-lg" href="#" role="button">Learn more</a>
+    </div>
+  </div>
+</div>
+<footer id="sticky-footer" class="py-4 bg-dark text-white">
+  <div class="container text-center">
+    <small>© 2022 Ilaya. All rights reserved.</small>
+  </div>
+</footer>
