--- a/app/views/itineraries/edit.html.erb
+++ b/app/views/itineraries/edit.html.erb
@@ -1,28 +1,5 @@
 <h1>Edit itinerary</h1>
 
-<% if @itinerary.errors.any? %>
-  <h2>The following errors prevented the itinerary from being saved</h2>
-  <ul>
-    <% @itinerary.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
+<%= render 'form' %>
 
-<%= form_with(model: @itinerary, local: true) do |f| %>
-
-  <p>
-    <%= f.label :location %><br/>
-    <%= f.text_field :location %>
-  </p>
-
-  <p>
-    <%= f.label :detail %><br/>
-    <%= f.text_area :detail %>
-  </p>
-
-  <p>
-    <%= f.submit %>
-  </p>
-
-<% end %>
+<%= link_to 'Cancel and return to itineraries listing', itineraries_path %>
