--- a/app/views/itineraries/index.html.erb
+++ b/app/views/itineraries/index.html.erb
@@ -1,7 +1,6 @@
-<div id="page-content">
-  <h1 class="text-center mt-4">Listing all itineraries</h1>
+<h1 class="text-center mt-4">Listing all itineraries</h1>
 
-  <div class="container">
+<div class="container">
   <% @itineraries.each do |itinerary| %>
     <div class="row justify-content-md-center">
       <div class="col-8 mt-4">
@@ -11,7 +10,7 @@
           </div>
           <div class="card-body">
             <h5 class="card-title"><%= link_to itinerary.location, itinerary_path(itinerary), class: "text-dark" %></h5>
-            <p class="card-text"><%= truncate(itinerary.detail, length: 100) %></p>
+            <p class="card-text"><%= simple_format(truncate(itinerary.detail, length: 150)) %></p>
             <%= link_to "View", itinerary_path(itinerary), class: "btn btn-dark" %>
             <%= link_to "Edit", edit_itinerary_path(itinerary), class: "btn btn-dark" %>
             <%= link_to "Delete", itinerary_path(itinerary), class: "btn btn-dark", method: :delete, data: {confirm: "Are you sure?"} %>
@@ -24,5 +23,4 @@
         </div>
     </div>
   <% end %>
-  </div>
 </div>
