--- a/app/views/itineraries/new.html.erb
+++ b/app/views/itineraries/new.html.erb
@@ -1,5 +1,2 @@
-<h1>Create a new itinerary</h1>
-
+<h1 class="text-center mt-4">Write an itinerary</h1>
 <%= render 'form' %>
-
-<%= link_to 'Return to itineraries listing', itineraries_path %>
