--- a/app/views/itineraries/_form.html.erb
+++ b/app/views/itineraries/_form.html.erb
@@ -1,26 +1,30 @@
-<% if @itinerary.errors.any? %>
-  <h2>The following errors prevented the itinerary from being saved</h2>
-  <ul>
-    <% @itinerary.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-10">
+      <%= render 'shared/errors' %>
+      <%= form_with(model: @itinerary, class: "shadow p-5 mb-3 rounded", local: true) do |f| %>
+        <div class="form-group row">
+          <%= f.label :location, class: "col-2 col-form-label" %>
+          <div class="col-10">
+            <%= f.text_field :location, class: "form-control shadow rounded", placeholder: "Location of itinerary" %>
+          </div>
+        </div>
 
-<%= form_with(model: @itinerary, local: true) do |f| %>
+        <div class="form-group row">
+          <%= f.label :detail, class: "col-2 col-form-label" %>
+          <div class="col-10">
+            <%= f.text_area :detail, rows: 10, class: "form-control shadow rounded", placeholder: "Details of itinerary" %>
+          </div>
+        </div>
+        <br/>
+        <div class="form-group row justify-content-center">
+          <%= f.submit class: "btn btn-dark btn-lg" %>
+        </div>
 
-  <p>
-    <%= f.label :location %><br/>
-    <%= f.text_field :location %>
-  </p>
-
-  <p>
-    <%= f.label :detail %><br/>
-    <%= f.text_area :detail %>
-  </p>
-
-  <p>
-    <%= f.submit %>
-  </p>
-
-<% end %>
+      <% end %>
+    </div>
+    <div class="mb-3">
+      <%= link_to '[ Cancel and return to itineraries listing ]', itineraries_path, class:"text-dark" %>
+    </div>
+  </div>
+</div>
