--- a/app/views/itineraries/edit.html.erb
+++ b/app/views/itineraries/edit.html.erb
@@ -1,5 +1,2 @@
-<h1>Edit itinerary</h1>
-
+<h1 class="text-center mt-4">Edit itinerary</h1>
 <%= render 'form' %>
-
-<%= link_to 'Cancel and return to itineraries listing', itineraries_path %>
