--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,19 +1,10 @@
-<div id="page-content">
-  <div class="container" id="home-container">
-    <div class="jumbotron text-center text-white">
-      <br>
-      <br>
-      <br>
-      <br>
-      <h4 class="display-4">Look for immersion; come with no expectation, and just enjoy the journey!</h4>
-      <p class="lead"></p>
-      <br>
-      <a class="btn btn-outline-light btn-lg" href="#" role="button">Learn more</a>
-    </div>
-  </div>
+<div class="jumbotron mb-0 text-center text-white">
+  <br>
+  <br>
+  <br>
+  <br>
+  <h4 class="display-3">Look for immersion; come with no expectation, and just enjoy the journey!</h3>
+  <p class="lead"></p>
+  <br>
+  <a class="btn btn-outline-light btn-lg" href="#" role="button">Learn more</a>
 </div>
-<footer id="sticky-footer" class="py-4 bg-dark text-white">
-  <div class="container text-center">
-    <small>© 2022 Ilaya. All rights reserved.</small>
-  </div>
-</footer>
