--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -22,7 +22,7 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 630px;
+  height: 100%;
   font-family: 'Lora', serif;
 }
 
